--- a/BlackburnExperiment_1/config.toml
+++ b/BlackburnExperiment_1/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://www.example.com/"
+baseurl = "https://mltconsecol.github.io/DraftWebsite/BlackburnExperiment_1/"
 languageCode = "en-us"
 title = "Mike Treglia"
 theme = "blackburn"
