--- a/BlackburnExperiment_1/config.toml
+++ b/BlackburnExperiment_1/config.toml
@@ -43,11 +43,11 @@ uglyurls = true
     identifier = "research"
     url = "/research/"
   [[menu.main]]
-    name = "Training"
-    pre = "<i class='fa fa-area-chart fa-fw'></i>"
+    name = "Teaching"
+    pre = "<i class='fa fa-university fa-fw'></i>"
     weight = 4
-    identifier = "training"
-    url = "/training/"
+    identifier = "teaching"
+    url = "/teaching/"
   [[menu.main]]
     name = "Coding Projects"
     pre = "<i class='fa fa-code fa-fw'></i>"
@@ -55,27 +55,21 @@ uglyurls = true
     identifier = "code"
     url = "/code/"
   [[menu.main]]
-    name = "CV"
-    pre = "<i class='fa fa-file fa-fw'></i>"
-    weight = 6
-    identifier = "cv"
-    url = "/pdfs/treglia_cv_20180107_norefs.pdf"
-  [[menu.main]]
     name = "Photography"
     pre = "<i class='fa fa-camera fa-fw'></i>"
-    weight = 7
+    weight = 6
     identifier = "photography"
     url = "/photography/"
   [[menu.main]]
     name = "Posts"
     pre = "<i class='fa fa-list fa-fw'></i>"
-    weight = 8
+    weight = 7
     identifier = "post"
     url = "/post/"
   [[menu.main]]
     name = "Contact"
     pre = "<i class='fa fa-phone fa-fw'></i>"
-    weight = 9
+    weight = 8
     url = "/contact/"
 
 [social]
