--- a/BlackburnExperiment_1/config.toml
+++ b/BlackburnExperiment_1/config.toml
@@ -1,4 +1,7 @@
-baseurl = "https://mltconsecol.github.io/DraftWebsite/BlackburnExperiment_1/public/"
+#For Testing locally
+baseurl = ""
+#For testing remotely
+#baseurl = "https://mltconsecol.github.io/DraftWebsite/BlackburnExperiment_1/public/"
 languageCode = "en-us"
 title = "Mike Treglia"
 theme = "blackburn"
@@ -6,7 +9,7 @@ author = "Mike Treglia"
 copyright = "&copy; 2018. All rights reserved."
 canonifyurls = true
 paginate = 10
-uglyurls = true
+#uglyurls = true
 
 [indexes]
   tag = "tags"
