--- a/BlackburnExperiment_1/config.toml
+++ b/BlackburnExperiment_1/config.toml
@@ -1,11 +1,11 @@
 #For Testing locally
-#baseurl = ""
+baseurl = ""
 #For testing remotely
 #baseurl = "https://mltconsecol.github.io/DraftWebsite/BlackburnExperiment_1/public/"
-baseurl="https://mltconsecol.github.io/DraftWebsite/BlackburnExperiment_1/"
+#baseurl="https://mltconsecol.github.io/DraftWebsite/BlackburnExperiment_1/"
 languageCode = "en-us"
 title = "Mike Treglia"
-theme = "blackburn"
+theme = "Mike Treglia"
 author = "Mike Treglia"
 copyright = "&copy; 2018. All rights reserved."
 canonifyurls = true
