--- a/BlackburnExperiment_1/config.toml
+++ b/BlackburnExperiment_1/config.toml
@@ -1,7 +1,7 @@
 #For Testing locally
-baseurl = ""
+#baseurl = ""
 #For testing remotely
-#baseurl = "https://mltconsecol.github.io/DraftWebsite/BlackburnExperiment_1/public/"
+baseurl = "https://mltconsecol.github.io/DraftWebsite/BlackburnExperiment_1/public/"
 #baseurl="https://mltconsecol.github.io/DraftWebsite/BlackburnExperiment_1/"
 languageCode = "en-us"
 title = "Mike Treglia"
