--- a/BlackburnExperiment_1/config.toml
+++ b/BlackburnExperiment_1/config.toml
@@ -1,8 +1,8 @@
 #For Testing locally
 #baseurl = "https://www.example.com/"
 #For testing remotely
-baseurl = "/BlackburnExperiment_1/public/"
-#baseurl="https://mltconsecol.github.io/DraftWebsite/BlackburnExperiment_1/"
+#baseurl = "/BlackburnExperiment_1/public/"
+baseurl="https://mltconsecol.github.io/DraftWebsite/BlackburnExperiment_1/public/"
 languageCode = "en-us"
 title = "Mike Treglia"
 theme = "Blackburn"
